# HearMyPaper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  README.md  docker-compose.yaml  index.html  index.txt  mise.toml  mkdocs.yml  pyproject.toml  sitemap.xml
apps/client/: LICENSE  pyproject.toml
apps/client/src/client/: __main__.py  app.py
apps/client/src/client/auth/: utils.py
apps/client/src/client/auth/ui/: login_screen.py
apps/client/src/client/conversion/ui/: catalog.py  download_form.py
apps/client/src/client/project/ui/: catalog.py  create_form.py  info.py  manage_students_form.py  update_form.py
apps/client/src/client/resources/: config.toml
apps/client/src/client/shared/ui/: catalog_screen.py  item_info_screen.py  resource_catalog.py
apps/client/src/client/shared/ui/components/: datetime_picker.py
apps/client/src/client/shared/utils/: navigator.py
apps/client/src/client/submission/: service.py
apps/client/src/client/submission/ui/: catalog.py  convert_form.py  grade_form.py  info.py  open_form.py  unseal_form.py  upload_form.py
apps/client/src/client/user/ui/: create_form.py  info.py  search.py  update_form.py
apps/client/src/hearmypaper/: app.py
apps/client/src/hearmypaper/auth/: enums.py  utils.py
apps/client/src/hearmypaper/project/ui/: create_form.py  manage_students_form.py  update_form.py
apps/client/src/hearmypaper/shared/utils/: api.py  session.py
apps/client/src/hearmypaper/submission/: api.py  crypto.py  service.py
apps/client/src/hearmypaper/submission/ui/: download.py
apps/hmp_client/: pyproject.toml
apps/hmp_client/src/hmp_client/: __main__.py
apps/hmp_client/src/hmp_client/auth/: service.py  utils.py
apps/hmp_client/src/hmp_client/shared/ui/: catalog_screen.py
apps/hmp_client/src/hmp_client/shared/utils/: api.py
apps/hmp_client/src/hmp_client/submission/: dto.py  service.py
apps/hmp_client/src/hmp_client/user/ui/: catalog.py  create_form.py  info.py  update_form.py
apps/hmp_converter/: Dockerfile  main.py  pyproject.toml
apps/hmp_converter/app/parser/: service.py
apps/hmp_converter/app/shared/config/: env.py
apps/hmp_converter/app/shared/dependencies/: manager.py  rabbitmq.py
apps/hmp_converter/app/tts/: listener.py  service.py
apps/hmp_manager/: main.py  pyproject.toml
apps/hmp_manager/app/auth/: router.py  service.py  utils.py
apps/hmp_manager/app/conversion/: dto.py  listener.py  repository.py  router.py  service.py
apps/hmp_manager/app/shared/config/: env.py
apps/hmp_manager/app/shared/dependencies/: db.py  rabbitmq.py  storage.py
apps/hmp_manager/app/submission/: dto.py  repository.py  router.py  service.py
apps/hmp_manager/app/user/: repository.py  router.py  service.py
apps/hmp_manager/db/migrations/: 20260504100000_create_identity_tables.sql  20260504102000_create_submission_tables.sql  20260504103000_create_conversion_tables.sql
apps/hmp_manager/old_app/conversion/: listener.py  router.py  service.py
apps/hmp_manager/old_app/submission/: repository.py  router.py  service.py
apps/hmp_manager/src/hmp_manager/: config.py  dependencies.py  main.py
apps/hmp_manager/src/hmp_manager/domain/auth/: exceptions.py  models.py  ports.py  service.py  utils.py
apps/hmp_manager/src/hmp_manager/domain/user/: exceptions.py  models.py  ports.py  service.py
apps/hmp_manager/src/hmp_manager/driven/identity/: __init__.py  pseudonym_provider.py
apps/hmp_manager/src/hmp_manager/driven/jwt/: __init__.py  jwt.py
apps/hmp_manager/src/hmp_manager/driven/postgres/: auth_repository.py  user_repository.py
apps/hmp_manager/src/hmp_manager/driven/redis/: __init__.py  challenge_repository.py
apps/hmp_manager/src/hmp_manager/driving/fastapi/: dependencies.py  main.py
apps/hmp_manager/src/hmp_manager/education/domain/: models.py  ports.py
apps/hmp_manager/src/hmp_manager/identity/domain/: models.py  ports.py
apps/hmp_manager/src/hmp_manager/in/fastapi/: dependencies.py  main.py
apps/hmp_manager/src/hmp_manager/old_app/user/: router.py
apps/leader/: .env.development  Dockerfile  auth.py  config.py  main.py  pyproject.toml  utils.py
apps/worker/: Dockerfile  main.py  pyproject.toml
ci-cd-docs/: index.html
client/: .pre-commit-config.yaml  README.md  pyproject.toml
client/app/: __main__.py
client/app/services/: auth_service.py
client/app/ui/: dashboard_screen.py  login_screen.py  register_screen.py  submition_screen.py  user_profile_screen.py
client/app/utils/: navigator.py
client/src/hearmypaper/: __main__.py  app.py
client/src/hearmypaper/pdf_to_audio/ui/: pdf_to_audio_form.py
client/src/hearmypaper/ui/: dashboard_screen.py  login_screen.py  main_window.py  register_screen.py  submition_screen.py  user_profile_screen.py
client/src/hearmypaper/utils/: APIClientError.py  navigator.py
libs/hmp_contracts/: pyproject.toml
libs/hmp_contracts/src/hmp_contracts/: __init__.py
libs/hmp_contracts/src/hmp_contracts/manager/: __init__.py  client.py  router.py
libs/hmp_contracts/src/hmp_contracts/manager/auth/: __init__.py  dto.py  module.py  router.py
libs/hmp_contracts/src/hmp_contracts/manager/conversion/: __init__.py  dto.py  module.py  router.py
libs/hmp_contracts/src/hmp_contracts/manager/shared/: enums.py
libs/hmp_contracts/src/hmp_contracts/manager/submission/: __init__.py  dto.py  module.py  router.py
libs/hmp_contracts/src/hmp_contracts/manager/user/: __init__.py  dto.py  module.py  router.py
libs/hmp_core/: pyproject.toml
libs/hmp_core/src/hmp_core/auth/: __init__.py  decorators.py  enums.py  identity.py  middleware.py  models.py  opa.py  pseudonyms.py  utils.py
libs/hmp_core/src/hmp_core/blp/: __init__.py  decorators.py  enums.py  utils.py
libs/hmp_core/src/hmp_core/clients/: __init__.py  manager.py
libs/hmp_core/src/hmp_core/crypto/: __init__.py  crypto.py
libs/hmp_core/src/hmp_core/events/: __init__.py  client.py  models.py
libs/hmp_core/src/hmp_core/infrastructure/: redis.py
libs/hmp_core/src/hmp_core/storage/: __init__.py  client.py  object.py  sql.py
libs/hmp_core/tests/: test_auth.py  test_crypto.py
(+154 files in other folders)
