[project]
name = "hmp-mono"
version = "2.0.0"
description = "HearMyPaper monorepo"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = [
    "apps/client",
    "apps/leader",
    "packages/shared-kernel",
    "packages/identity/identity-core",
    "packages/identity/identity-api",
    "packages/identity/identity-postgres",
    "packages/identity/identity-redis",
    "packages/identity/identity-id",
    "packages/identity/identity-jwt",
    "packages/identity/identity-ch-gen",
    "packages/identity/identity-signture",
    "packages/education/education-core",
    "packages/education/education-api",
    "packages/education/education-postgres",
    "packages/education/education-identity-bridge",
    "packages/submissions/submissions-core",
    "packages/submissions/submissions-api",
    "packages/submissions/submissions-postgres",
    "packages/submissions/submissions-storage",
    "packages/submissions/submissions-education-bridge",
]

[dependency-groups]
dev = [
    "ty>=0.0.34",
    "ruff>=0.15.12",
]
