[project]
name = "hmp-mono"
version = "2.0.0"
description = "HearMyPaper monorepo"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = [
    "apps/client",
    "apps/leader",
    "apps/worker",
    "packages/shared-kernel",
    "packages/client/client-core",
    "packages/client/client-crypto",
    "packages/client/client-server-bridge",
    "packages/client/client-credentials",
    "packages/client/client-file-manager",
    "packages/identity/identity-api",
    "packages/identity/identity-api-client",
    "packages/identity/identity-core",
    "packages/identity/identity-postgres",
    "packages/identity/identity-redis",
    "packages/identity/identity-id",
    "packages/identity/identity-jwt",
    "packages/identity/identity-ch-gen",
    "packages/identity/identity-signture",
    "packages/education/education-api",
    "packages/education/education-api-client",
    "packages/education/education-core",
    "packages/education/education-postgres",
    "packages/education/education-rabbitmq",
    "packages/education/education-identity-bridge",
    "packages/submissions/submissions-api",
    "packages/submissions/submissions-api-client",
    "packages/submissions/submissions-core",
    "packages/submissions/submissions-postgres",
    "packages/submissions/submissions-storage",
    "packages/submissions/submissions-rabbitmq",
    "packages/submissions/submissions-education-bridge",
    "packages/processing/processing-core",
    "packages/processing/processing-api",
    "packages/processing/processing-postgres",
    "packages/processing/processing-storage",
    "packages/processing/processing-rabbitmq",
    "packages/processing/processing-orchestrator-bridge",
    "packages/orchestrator/orchestrator-core",
    "packages/orchestrator/orchestrator-redis",
]

[dependency-groups]
dev = [
    "ty>=0.0.34",
    "ruff>=0.15.12",
]
