[project]
name = "hearmypaper-client"
description = "Secure your course project, and only let the instructor listen!"
version = "0.0.1"
requires-python = ">= 3.13"
authors = [
  {name = "Mykola Ratushniak", email = "nicolas.ratushniak@gmail.com"},
  {name = "Neholiuk Oleksandr", email = "kingstn29@gmail.com"},
]
dependencies = [
    "PyQt5>=5.15.11",
    "cryptography>=46.0.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.13.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0"
]

[project.urls]
Homepage = "https://staleread.github.io/HearMyPaper/"
