[project]
name = "client"
description = "HearMyPaper desktop client"
version = "1.1.0"
requires-python = ">= 3.14"
authors = [
  {name = "Mykola Ratushniak", email = "nicolas.ratushniak@gmail.com"},
  {name = "Neholiuk Oleksandr", email = "kingstn29@gmail.com"},
]
dependencies = [
    "briefcase>=0.3.25",
    "requests>=2.32.5",
    "result>=0.17.0",
    "pydantic>=2.11.9",
    "toml>=0.10.2",
    "ipinfo>=5.2.1",
    "toga-gtk~=0.5.0",
    "httpx>=0.28.1",
    # Comment the following entries when running with briefcase
    # "shared-kernel",
    # "client-core",
    # "client-server-bridge",
    # "client-credentials",
    # "client-file-manager",
    # "processing-core",
]


[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.briefcase]
project_name = "HearMyPaper"
bundle = "edu.chnu"
license = "MIT"
license-files = ["LICENSE"]

[tool.briefcase.app.client]
formal_name = "HearMyPaper"
long_description = """HearMyPaper protects your student work with cryptography.
Only instructors can unlock and access the real content.
"""
sources = [
    "src/client",
    "../../packages/shared-kernel/src/shared_kernel",
    "../../packages/client/client-core/src/client_core",
    "../../packages/client/client-crypto/src/client_crypto",
    "../../packages/client/client-server-bridge/src/client_server_bridge",
    "../../packages/client/client-credentials/src/client_credentials",
    "../../packages/client/client-file-manager/src/client_file_manager",
    "../../packages/identity/identity-core/src/identity_core",
    "../../packages/education/education-core/src/education_core",
    "../../packages/submissions/submissions-core/src/submissions_core",
    "../../packages/processing/processing-core/src/processing_core",
]
test_sources = [
    "tests",
]

test_requires = [
    "pytest",
]

[tool.briefcase.app.client.macOS]
universal_build = true
requires = [
    "toga-cocoa~=0.5.0",
    "std-nslog~=1.0.3",
]

[tool.briefcase.app.client.linux]
requires = [
    "toga-gtk~=0.5.0",
    "pygobject < 3.52.1",
]

[tool.uv.sources]
shared-kernel = { workspace = true }
client-core = { workspace = true }
client-server-bridge = { workspace = true }
client-credentials = { workspace = true }
identity-core = { workspace = true }
education-core = { workspace = true }
submissions-core = { workspace = true }
processing-core = { workspace = true }
client-file-manager = { workspace = true }
