[project]
name = "hmp-client"
description = "HearMyPaper desktop client"
version = "1.1.0"
requires-python = ">= 3.14"
authors = [
  {name = "Mykola Ratushniak", email = "nicolas.ratushniak@gmail.com"},
  {name = "Neholiuk Oleksandr", email = "kingstn29@gmail.com"},
]
dependencies = [
    "hmp-core",
    "briefcase>=0.3.25",
    "cryptography>=46.0.1",
    "requests>=2.32.5",
    "result>=0.17.0",
    "pydantic>=2.11.9",
    "toml>=0.10.2",
    "cbor2>=5.7.0",
    "ipinfo>=5.2.1",
    "toga-gtk~=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ty>=0.0.34",
    "ruff>=0.15.12",
]

[tool.uv.sources]
hmp_core = { workspace = true }

[tool.briefcase]
project_name = "HearMyPaper"
bundle = "edu.chnu"
license.file = "LICENSE"

[tool.briefcase.app.hmp-client]
formal_name = "HearMyPaper"
long_description = """HearMyPaper protects your student work with cryptography.
Only instructors can unlock and access the real content.
"""
sources = [
    "src/hmp_client",
    "../../libs/hmp_core/src/hmp_core",
]
test_sources = [
    "tests",
]

test_requires = [
    "pytest",
]

[tool.briefcase.app.hmp-client.macOS]
universal_build = true
requires = [
    "toga-cocoa~=0.5.0",
    "std-nslog~=1.0.3",
]

[tool.briefcase.app.hmp-client.linux]
requires = [
    "toga-gtk~=0.5.0",
    "pygobject < 3.52.1",
]
