[project]
name = "hmp-converter"
version = "0.1.0"
description = "HearMyPaper file conversion service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aio-pika>=9.6.2",
    "fastapi[standard]>=0.136.1",
    "hmp-core",
    "langdetect>=1.0.9",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pymupdf>=1.27.2.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ty>=0.0.34",
    "ruff>=0.15.12",
]

[tool.uv.sources]
hmp-core = { workspace = true }
