[project]
name = "hmp-manager"
version = "1.0.0"
description = "HearMyPaper manager service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "hmp-core",
    "asyncpg>=0.30.0",
    "bandit[sarif]>=1.9.4",
    "cbor2>=5.7.0",
    "cryptography>=45.0.7",
    "fastapi-cache2[redis]>=0.2.2",
    "fastapi[standard]>=0.116.1",
    "langdetect>=1.0.9",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pymupdf>=1.25.2",
    "pytest>=8.4.2",
    "sqlalchemy>=2.0.43",
    "aio-pika>=9.6.2",
    "redis>=4.6.0",
    "uidgen>=1.0.2",
]

[tool.uv.sources]
hmp-core = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ty>=0.0.34",
    "ruff>=0.15.12",
    "locust>=2.41.6",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "requests>=2.32.5",
    "types-redis>=4.6.0.20241004",
]
