[project]
name = "hmp-contracts"
version = "1.0.0"
description = "API Contracts for HearMyPaper"
readme = "README.md"
authors = [
    { name = "Mykola Ratushniak", email = "nicolas.ratushniak@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.3",
    "httpx>=0.28.1",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ty>=0.0.34",
    "ruff>=0.15.12",
    "types-aioboto3>=15.5.0",
]
