[project]
name = "hmp-core"
version = "0.1.0"
description = "Core package for HearMyPaper"
readme = "README.md"
authors = [
    { name = "Mykola Ratushniak", email = "nicolas.ratushniak@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "pydantic>=2.13.3",
    "pynacl>=1.6.2",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ty>=0.0.34",
    "ruff>=0.15.12",
]
