[project]
name = "hmp-core"
version = "1.0.0"
description = "Core package for HearMyPaper"
readme = "README.md"
authors = [
    { name = "Mykola Ratushniak", email = "nicolas.ratushniak@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aio-pika>=9.6.2",
    "aioboto3>=15.5.0",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "pynacl>=1.6.2",
    "sqlalchemy>=2.0.49",
    "uidgen>=1.0.2",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ty>=0.0.34",
    "ruff>=0.15.12",
    "types-aioboto3>=15.5.0",
]
